src/test/resources/Parser/SyntaxErrors/IncompatibleTypesAssignment.front
class A:
    a: A = B();

class B:
    constructors;
    b: bool?;